R028 Stage 09 pilot support reservation and native regeneration local gate